# globes

Distribution/: AUTHORS  BUGS  INSTALL  Makefile.am  Makefile.in  NEWS  OLDS  README  REFERENCES  TODO  acinclude.m4  aclocal.m4  config-h.in  config.h  configure  configure.in  globes-config.in  globes-config.src.in  globes-module.in  globes-module.src.in  globes-script  globes.m4  globes.spec.in  ltmain.sh  reset-coverage  smeft.c
Distribution/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Distribution/data/: ICARUS.glb  JHFHKAll.glb  JHFSK.glb  JHFSKanti.glb  JHFSKantinew.glb  JHFSKcomb.glb  JHFSKnew.glb  MINOS.glb  Makefile.am  Makefile.in  NUMI.glb  NUMI12.glb  NUMI12anti.glb  NUMI12comb.glb  NUMI9.glb  NUMI9anti.glb  NUMI9comb.glb  NuFact.glb  NuFact1.glb  NuFact2.glb  OPERA.glb  Reactor.glb  Reactor1.glb  Reactor2.glb  checksums  dchooz-near.glb  md5-sums  pack
Distribution/data/BetaBeam/BB_TASD/: BBvar_TASD.glb
Distribution/data/BetaBeam/BB_WC/: BBvar_WC.glb
Distribution/data/NuFact/GoldSilver/: NF_GoldSilver.glb
Distribution/data/NuFact/Standard/: NFstandard.glb
Distribution/data/NuFact/Variable/: NFvar.glb
Distribution/data/Reactor/DoubleCHOOZ/: D-Chooz_far.glb
Distribution/data/Reactor/large/: Reactor2.glb
Distribution/data/SuperBeam/NOvA/: NOvA.glb
Distribution/data/SuperBeam/T2K/: T2K.glb
Distribution/doc/: Makefile.in  globes-discovery.1  howto.tex
Distribution/examples/: DocPlots.nb  Makefile.in  NF-smeft.glb  NFstandard.glb  Reactor1.glb  dchooz-far.glb  dchooz-near.glb  degfinder.c  example-smeft.c  example-tour.c  example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  list.glb  myio.c  myio.h  nsi_probability.c  nsi_probability.h  pingu-mockup.glb
Distribution/examples/Dune_EFT_study2/: DUNE_GLoBES_FD.glb  DUNE_GLoBES_ND.glb  Makefile  WEFT_Analysis  WEFT_Analysis.c  channels_smeft.inc  definitions_FD.inc  definitions_ND.inc  rates.txt  syst_list.inc
Distribution/examples/Dune_EFT_study2/Fluxes_smeft/: FluxFarDet_SMEFT.inc  FluxNearDet_SMEFT.inc
Distribution/examples/Dune_EFT_study2/Fluxes_smeft/COPY/: FluxFarDet_SMEFT.inc  (+1 more)
Distribution/examples/Dune_EFT_study2/old/: DUNE_GLoBES_FD.glb  WEFT_Analysis.c
Distribution/examples/Dune_EFT_study2/results/: 1.txt  2.txt  CC_P_cs_results.txt  CC_P_ud_new_resultsBOTH.txt  CC_P_ud_new_resultsBOTH2.txt  CC_P_ud_new_resultsND.txt  CC_P_ud_new_resultsND4.txt  CC_P_ud_results (copy).txt  CC_P_ud_results.txt  CC_P_us_new_resultsBOTH.txt  CC_P_us_new_resultsBOTH2.txt  CC_P_us_new_resultsBOTH3.txt  CC_P_us_results.txt  check_tau_detection.txt  parameters.txt  plot.py  plot_BOTH.py  plot_BOTH_us.py
Distribution/examples/Dune_EFT_study2/smr/: Smear_nominal.inc
Distribution/examples/Dune_EFT_study2/xsec/: AntineutrinoInteractions.txt  DetAllCCQEOxygen.txt  GENIE_2_12_DUNE.inc
Distribution/globes/: Makefile.am  Makefile.in  glb-modules.h  globes.h  globes.pm  globes_perl.c  globes_wrap.c
Distribution/lapack/: Makefile.am  Makefile.in  Notice  dcabs1.c  dlabad.c  dladiv.c  dlamch.c  dlapy2.c  dlapy3.c  dscal.c  dzasum.c  dznrm2.c  idamax.c  ieeeck.c  ilaenv.c  izamax.c  lsame.c  xerbla.c  zaxpy.c  zcopy.c  zdotc.c  zdotu.c  zdscal.c  zgebak.c  zgebal.c  zgeev.c  zgehd2.c  zgehrd.c  zgemm.c  zgemv.c  zgerc.c  zhseqr.c  zlacgv.c  zlacpy.c  zladiv.c  zlahqr.c  zlahrd.c  zlange.c  zlanhs.c  zlarf.c  (+17 more)
Distribution/lib/: Makefile  Makefile.am  Makefile.in  stdio.h  stdio.in.h  stdlib.h  string.h  unistd.h  wchar.h
Distribution/libf2c/: Makefile.am  Makefile.in  backspace.c  err.c  f2c.h  i77vers.c  main.c  wrtfmt.c  wsfe.c  xsum0.out
Distribution/libltdl/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
Distribution/libltdl/autom4te.cache/: output.0  requests  traces.0  traces.1
Distribution/m4/: argp.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib.m4  lapack.m4  lapack.m4~  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  my_gsl.m4  swig_perl.m4  warn-on-use.m4
Distribution/modules/: Makefile.am  Makefile.in  MakefileExample.in  glb_glb.c  glb_modules.c  glb_prior_module.c  glb_prior_module.h  globes.c  module-example.c
Distribution/nrc/: Makefile.am  Makefile.in  brent.c  f1dim.c  linmin.c  linmin2.c  nrutil.c  powell.c  powell2.c
Distribution/source/: Makefile  Makefile.am  Makefile.in  glb_compat.c  glb_error.c  glb_error.h  glb_fluxes.c  glb_fluxes.h  glb_glb.c  glb_lexer.c  glb_lexer.h  glb_lexer.l  glb_min_sup.c  glb_min_sup.h  glb_minimize.c  glb_minimize.h  glb_modules.c  glb_modules.h  glb_multiex.c  glb_multiex.h  glb_parser.c  glb_parser.h  glb_parser.y  glb_parser_addons.h  glb_parser_type.h  glb_path.c  glb_path.h  glb_prior.c  glb_prior.h  glb_probability.c  glb_probability.cc  glb_probability.h  glb_profile.c  glb_profile.h  glb_rate_engine.c  glb_rate_engine.h  glb_smear.c  glb_smear.h  glb_sys.c  glb_sys.h  (+37 more)
Distribution/source/.deps/: glb_tools_eightfold.Po  glb_tools_header.Po  glb_tools_parser.Po  globes-accuracy.Po  globes-deltatheta.Po  globes-discovery.Po  globes-simple.Po  globes.Po  libglobes_la-glb_compat.Plo  libglobes_la-glb_error.Plo  libglobes_la-glb_fluxes.Plo  libglobes_la-glb_glb.Plo  libglobes_la-glb_lexer.Plo  libglobes_la-glb_min_sup.Plo  libglobes_la-glb_minimize.Plo  libglobes_la-glb_multiex.Plo  libglobes_la-glb_parser.Plo  libglobes_la-glb_path.Plo  libglobes_la-glb_prior.Plo  libglobes_la-glb_probability.Plo  libglobes_la-glb_profile.Plo  libglobes_la-glb_rate_engine.Plo  libglobes_la-glb_smear.Plo  libglobes_la-glb_sys.Plo  libglobes_la-glb_version.Plo  libglobes_la-glb_wrapper.Plo  libglobes_la-smeft.Plo
Distribution/source/.libs/: globes  globes-accuracy  globes-deltatheta  globes-discovery  globes-simple  libglobes.lai  libglobes.so.8  libglobes.so.8.3.2
Distribution/testsuite/: 01-probabilities.c  01-probabilities.glb  02-probabilities-filtered.c  02-probabilities-filtered.glb  03-chisys.c  03-chisys.glb  04-chicorr.c  04-chicorr.glb  05-chideg.c  06-chibars.c  COVERAGE  Makefile.in  README  glbdiff.pl  myio.c  myio.h  run-tests
(+462 files in other folders)
