DIST_SUBDIRS = source data libltdl
SUBDIRS = source data libltdl
INCLUDES = $(LTDLINCL)

EXTRA_DIST =  globes/globes.h\
examples/Makefile.in examples/example1.c  examples/example3.c examples/myio.c\
examples/example-tour.c  examples/example2.c  examples/example4.c\
examples/myio.h examples/XCC.dat examples/NuFact.glb\
BUGS 

AM_YFLAGS =  -d 
