pkgdata_DATA = CNGS_Spectra.dat NUMI12minus.dat\
NUMIminus.dat  XCC_CNGS.dat\
JHFminus.dat   NUMI12plus.dat\
NUMIplus.dat   XCCreactor.dat\
JHFplus.dat    NUMI9minus.dat\
Reactor.dat    XNC.dat\
MINOS_Spectra.dat  NUMI9plus.dat\
XCC.dat        XQE.dat\
ICARUS.glb     JHFSKantinew.glb\
NUMI9.glb\
NuFact2.glb    JHFHKAll.glb\
JHFSKcomb.glb  NUMI12.glb\
NUMI9anti.glb  OPERA.glb\
JHFSKnew.glb\
NUMI12anti.glb NUMI9comb.glb\
MINOS.glb NUMI12comb.glb

EXTRA_DIST = $(pkgdata_DATA)