pkgdata_DATA = CNGS_Spectra.dat NUMI12minus.dat\
XCC_CNGS.dat\
JHFminus.dat   NUMI12plus.dat\
XCCreactor.dat\
JHFplus.dat    NUMI9minus.dat\
Reactor.dat    Reactor1.glb Reactor2.glb XNC.dat\
MINOS_Spectra.dat  NUMI9plus.dat\
XCC.dat        XQE.dat\
ICARUS.glb     JHFSKantinew.glb\
NUMI9.glb\
NuFact1.glb NuFact2.glb    JHFHKAll.glb\
JHFSKcomb.glb  NUMI12.glb\
NUMI9anti.glb  OPERA.glb\
JHFSKnew.glb\
NUMI12anti.glb NUMI9comb.glb\
MINOS.glb NUMI12comb.glb

EXTRA_DIST = $(pkgdata_DATA)